--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>myportfolio</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Ehsaan | Full-Stack Developer</title>
+  <meta name="description"
+    content="Ehsaan is a full-stack MERN developer based in Shirdi, Maharashtra, crafting responsive, scalable web applications from database to UI." />
+  <meta name="author" content="Ehsaan" />
+  <meta name="theme-color" content="#10b981" />
+
+  <!-- Open Graph / Social preview -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Ehsaan | Full-Stack MERN Developer" />
+  <meta property="og:description"
+    content="Full-stack developer building responsive, scalable apps with React, Node and MongoDB. Actively looking for full-stack roles & freelance work." />
+  <meta property="og:url" content="https://your-domain.vercel.app" />
+  <meta property="og:image" content="https://your-domain.vercel.app/og.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Ehsaan | Full-Stack MERN Developer" />
+  <meta name="twitter:description" content="Full-stack developer crafting modern web apps with the MERN stack." />
+  <meta name="twitter:image" content="https://your-domain.vercel.app/og.png" />
+
+  <script type="module" src="/src/main.jsx"></script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
